--- a/views/result.ejs
+++ b/views/result.ejs
@@ -9,8 +9,8 @@
 <h1>Total Credits: <%= totalCredits %></h1>
 
 <!--  totalCredits, studentInfo, neededGrades, -->
-<pre><%= JSON.stringify(totalCredits, null, 2) %></pre>
 <pre><%= JSON.stringify(studentInfo, null, 2) %></pre>
 <pre><%= JSON.stringify(neededGrades, null, 2) %></pre>
+<pre><%= JSON.stringify(currentSixWeeks, null, 2) %></pre>
 </body>
 </html>
